Fixes for broken layout pages

--- a/src/components/css/edit.css
+++ b/src/components/css/edit.css
@@ -285,3 +285,8 @@
 #layout-preview-xxs {
   width: 484px !important;
 }
+.tile-chooser {
+  top:unset;
+  left: 0;
+  bottom: 100%;
+}
